fix: modals z-index

--- a/src/styles/components/modal/Backdrop.module.scss
+++ b/src/styles/components/modal/Backdrop.module.scss
@@ -5,7 +5,6 @@
   position: fixed;
   right: 0;
   width: 100%;
-  z-index: 1000;
 }
 
 .backdrop_70 {
